update deps versions

--- a/ansible/ubuntu/roles/fish/tasks/main.yml
+++ b/ansible/ubuntu/roles/fish/tasks/main.yml
@@ -8,4 +8,4 @@
 
 - name: set default shell
   become: true
-  command: "chsh -s /home/{{ user }}/.nix-profile/bin/zsh {{ user }}"
+  command: "chsh -s /home/{{ user }}/.nix-profile/bin/fish {{ user }}"
