--- a/ansible/ubuntu/site.yml
+++ b/ansible/ubuntu/site.yml
@@ -5,7 +5,7 @@
    - var.yml
   roles:
     - role: nix
-      tags: ["nix", "dev"]
+      tags: ["nix"]
     - role: git
       tags: ["git", "dev"]
     - role: docker
