--- a/ansible/nix/roles/emacs/tasks/main.yml
+++ b/ansible/nix/roles/emacs/tasks/main.yml
@@ -4,4 +4,4 @@
 
 - name: install from nix
   become_user: "{{ user }}"
-  command: "~/.nix-profile/bin/nix-env -i docker-18.09.6"
+  command: "~/.nix-profile/bin/nix-env -i emacs-26.3"
