--- a/ansible/nix/roles/fish/tasks/main.yml
+++ b/ansible/nix/roles/fish/tasks/main.yml
@@ -8,4 +8,4 @@
 
 - name: set default shell
   become: true
-  command: "chsh -s /home/{{ user }}/.nix-profile/bin/fish {{ user }}"
+  command: "chsh -s {{ homedir }}/.nix-profile/bin/fish {{ user }}"
