--- a/ansible/nix/roles/docker/tasks/main.yml
+++ b/ansible/nix/roles/docker/tasks/main.yml
@@ -4,4 +4,4 @@
 
 - name: install from nix
   become_user: "{{ user }}"
-  command: "~/.nix-profile/bin/nix-env -i elixir-1.8.2"
+  command: "~/.nix-profile/bin/nix-env -i docker-18.09.8"
