--- a/ansible/roles/nix_apps/tasks/main.yml
+++ b/ansible/roles/nix_apps/tasks/main.yml
@@ -23,9 +23,14 @@
     - "ansible"
     - "sshpass"
     - "tmux"
-    - "docker"
+#    - "docker"
+    - "helm-2.14.2"
+    - "terraform"
     - "emacs"
     - "elixir"
+    - "python3-3.7.4"
+    - "python3.7-pip-19.1.1"
+#    - "python3.7-setuptools-41.0.1"
     - "fish"
     - "nodejs"
     - "reattach-to-user-namespace"
