--- a/ansible/roles/nix_apps/tasks/main.yml
+++ b/ansible/roles/nix_apps/tasks/main.yml
@@ -30,10 +30,13 @@
     - "elixir"
     - "python3-3.7.4"
     - "python3.7-pip-19.1.1"
-#    - "python3.7-setuptools-41.0.1"
     - "fish"
+    - "scala"
+    - "sbt"
     - "nodejs"
     - "reattach-to-user-namespace"
+    - "graphviz"
+    - "peco"
 
 - name: nix gc
   become_user: "{{ user }}"
