--- a/ansible/roles/configs/files/.tmux.conf
+++ b/ansible/roles/configs/files/.tmux.conf
@@ -15,6 +15,7 @@ bind 3 split-window -h
 bind 2 split-window -v
 bind 4 kill-pane
 bind 1 break-pane
+bind m display-pane
 bind -Tcopy-mode C-g send-keys -X cancel
 
 bind b select-pane -L
