--- a/ansible/roles/nix_apps/tasks/main.yml
+++ b/ansible/roles/nix_apps/tasks/main.yml
@@ -28,6 +28,7 @@
     - "terraform"
     - "emacs"
     - "elixir"
+    - "erlang"
     - "python3-3.7.4"
     - "python3.7-pip-19.1.1"
     - "fish"
